--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -97,7 +97,7 @@
 <footer>
   <div class="container">
     <span class="wrap">
-      <p class="text-center"> TEFL, ® 2015
+      <p class="text-center"> TEFL Hiking, ® 2015
       </p>
     </span>
   </div>
