--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -1,14 +1,13 @@
-<h2 id="student-title"> Edit Student </h2>
+<div class="text-center">
+	<h2> Edit Student </h2><br>
 
-<hr>
-
-<%= render 'form' %>
+	<%= render 'form' %>
+</div>
 
 <div id="pager-edit">
 	<ul class="pager">
-	      <li><a href="/tutors">Back</a></li> 
-	 </ul>
+		<li><a href="/tutors">Back</a></li> 
+	</ul>
 </div>
 
 
- 
