--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,15 +1,12 @@
-<h2 id="student-title">Editing User</h2>
-
-<div class ="container">
-    <div class="login-img">
-      <img src="/images/top-img.jpg" width:"1200" height:"600" class="img-responsive" alt="Responsive image">
-</div>
+<div class="text-center">
+<h2>Editing User</h2><br>
 
 <%= render 'form' %>
+</div>
 
 <div id="pager-edit">
 	<ul class="pager">
-	      <li><a href="/users">Back</a></li> 
-	 </ul>
+		<li><a href="/users">Back</a></li> 
+	</ul>
 </div>
 
