--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,4 +1,4 @@
-<table>
+<table class="table">
   <tr>
     <td>
       <%= form_for :comment, url: comment_path(@comment), method: :patch do |f| %>
