--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html ng-app="teflhikingApp" lang="en">
 <head>
 
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-
-  <title>Tefl Hiking</title>
+  <title>TEFL Hiking</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width">
 
   <!--He optado por usar las clases predefinidas de Bootstrap para el diseño responsive-->
-  <!--<link href="assets/stylesheets/home.css" rel="stylesheet" type"text/css" >-->
+  <!--link href="assets/stylesheets/home.css" rel="stylesheet" type"text/css">-->
   <link href="http://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet" type="text/css">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" type="text/css" >
 
@@ -20,6 +20,10 @@
 </head>
 
 <body>
+
+  <div ng-controller="myController">
+    {{"Angular test"}}
+  </div>
 
   <nav class="navbar navbar-default" role="navigation">
     <div class="nav_container">
@@ -89,6 +93,14 @@
 </nav>
 
 <%= yield %>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+
+<script> var teflhikingApp = angular.module('teflhikingApp', [])
+teflhikingApp.controller('myController', function($scope){
+  $scope.test = "Test";
+
+});
+</script>
 </body>
 
 <footer>
