--- a/app/views/students/tools.html.erb
+++ b/app/views/students/tools.html.erb
@@ -4,13 +4,13 @@
 </head>
 
 <body>
-  <h2 class="text-center">
+  <h2 class="text-justify">
     <img id="tools-logo" src="/images/tools.png" height="46" width="46"> Tools 
   </h2><br>   
   <h4 class="text-center">Get used to some APPs </h4>
 
   <hr>
-  <div class="text-center">
+  <div class="text-justify">
     <img id="duolingo-logo" src="/images/duolingo.png" height="46" width="46">
 
     <h4><strong>Discover Duolingo, an amazing and interactive way of learning English.</strong></h4><br>
@@ -21,7 +21,7 @@
     </ol>
   </div>
 
-  <div class="text-center">
+  <div class="text-justify">
     <img id="dropbox-logo" src="/images/dropbox.png" height="46" width="46">
 
     <h4><strong>Browse our Dropbox, one of the best cloud servers to share our content.</strong></h4><br>
