--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,116 +1,94 @@
 <!DOCTYPE html>
-<html ng-app="teflhikingApp" lang="en">
+<html lang="en">
 <head>
-
   <meta charset="utf-8">
   <title>TEFL Hiking</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width">
-
+  <meta content="" name="description">
+  <meta content="width=device-width" name="viewport">
   <!--Bootstrap for responsive design-->
- 
-  <link href="http://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet" type="text/css">
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" type="text/css" >
-  <link href="assets/stylesheets/home.css" rel="stylesheet" type"text/css">
-
-  <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-
-  <%= stylesheet_link_tag 'application' => true, media: 'all' %>
-  <%= javascript_include_tag 'application'=> true %>
-  <%= csrf_meta_tags %>
+  <link href="http://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet"
+  type="text/css">
+  <link href=
+  "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel=
+  "stylesheet" type="text/css">
+  <link href="assets/stylesheets/home.css" rel="stylesheet">
+  <script src="//code.jquery.com/jquery-1.11.3.min.js">
+  </script><%= stylesheet_link_tag 'application' => true, media: 'all' %><%= javascript_include_tag 'application'=> true %><%= csrf_meta_tags %>
 </head>
-
 <body>
-
-  <div ng-controller="myController">
+  <div>
     {{"Angular test"}}
   </div>
-
   <nav class="navbar navbar-default" role="navigation">
     <div class="nav_container">
       <div class="navbar-header">
-        <ul>
-          <a class="navbar-brand" href="/home">
-            <img class="img-thumbnail" alt="TEFL" width="36" height="36" src="/images/tefl_logo.jpg">
-          </a>
-        </ul>
+        <div style="margin-left: 2em">
+          <a class="navbar-brand" href="/home"><img alt="TEFL" class=
+          "img-thumbnail" height="36" src="/images/tefl_logo.jpg" width=
+          "36"></a>
+        </div>
       </div>
     </div>
-
     <ul class="nav nav-bar nav-pills pull-right">
-    </li>
-
-    <li role="presentation"> <span id="home-link">
-    </span><a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse" href="/home">HOME</a>
-  </li>
-
-  <li role="presentation"> <span id="teachers-link">
-  </span><a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse" href="/teachers">TEACHERS</a>
-</li>
-
-<li role="presentation"><span id="student-link">
-</span><a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse" href="/students">STUDENTS</a>
-</li>
-
-<li role="presentation"><span id="tools-link">
-</span><a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse" href="/tools">TOOLS</a>
-</li>
-
-<li role="presentation"><span id="games-link">
-</span><a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse" href="/games">GAMES</a>
-</li>
-<li role="presentation"><span id="media-link">
-</span><a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse" href="/media">MEDIA</a>
-</li>
-
-<li role="presentation"><span id="posts-link">
-</span><a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse" href="/posts">BLOG</a>
-</li>
-
-<li role="presentation"><span id="contact-link">
-</span><a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse" href="contact">CONTACT</a>
-</li>
-</ul>
-
-</div>
-</nav>
-
-<div class="navbar navbar-default" role="navigation">
-  <span id="log_container">  
-    <% if current_user %> 
-    Logged in as <%= current_user.email %><br>
+      <li role="presentation">
+        <span id="home-link"></span><a class="btn btn-navbar" data-target=
+        ".nav-collapse" data-toggle="collapse" href="/home">HOME</a>
+      </li>
+      <li role="presentation">
+        <span id="teachers-link"></span><a class="btn btn-navbar" data-target=
+        ".nav-collapse" data-toggle="collapse" href="/teachers">TEACHERS</a>
+      </li>
+      <li role="presentation">
+        <span id="student-link"></span><a class="btn btn-navbar" data-target=
+        ".nav-collapse" data-toggle="collapse" href="/students">STUDENTS</a>
+      </li>
+      <li role="presentation">
+        <span id="tools-link"></span><a class="btn btn-navbar" data-target=
+        ".nav-collapse" data-toggle="collapse" href="/tools">TOOLS</a>
+      </li>
+      <li role="presentation">
+        <span id="games-link"></span><a class="btn btn-navbar" data-target=
+        ".nav-collapse" data-toggle="collapse" href="/games">GAMES</a>
+      </li>
+      <li role="presentation">
+        <span id="media-link"></span><a class="btn btn-navbar" data-target=
+        ".nav-collapse" data-toggle="collapse" href="/media">MEDIA</a>
+      </li>
+      <li role="presentation">
+        <span id="posts-link"></span><a class="btn btn-navbar" data-target=
+        ".nav-collapse" data-toggle="collapse" href="/posts">BLOG</a>
+      </li>
+      <li role="presentation">
+        <span id="contact-link"></span><a class="btn btn-navbar" data-target=
+        ".nav-collapse" data-toggle="collapse" href="contact">CONTACT</a>
+      </li>
+    </ul>
+  </nav>
+  <div class="navbar navbar-default" role="navigation">
+    <span id="log_container"><%if current_user %> Logged in as
+    <%= current_user.email %><br>
     <%= link_to "Edit Profile", edit_user_path(current_user.id) %> |
-    <%= link_to "Log out", :logout, method: :post %>
-    <% else %>
-    <%= link_to "Sign up", signup_path %>
-    or
-    <%= link_to "Log in", login_path %>
-  </span>
-  <% end %>   
-  <% flash.each do |name, msg| %> 
-  <%= content_tag :div, msg, :id => "flash#name" %>
-  <% end %>
-</span>
-</nav>
-
-<%= yield %>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-
-<script> var teflhikingApp = angular.module('teflhikingApp', [])
-teflhikingApp.controller('myController', function($scope){
-  $scope.test = "Test";
-
-});
-</script>
-</body>
-
-<footer>
-  <div class="container">
-    <span class="wrap">
-      <p class="text-center"> TEFL Hiking, ® 2016
-      </p>
-    </span>
+    <%= link_to "Log out", :logout, method: :post %> <%else %>
+    <%= link_to "Sign up", signup_path %> or
+    <%= link_to "Log in", login_path %></span> <%end %>
+    <%flash.each do |name, msg| %>
+    <%= content_tag :div, msg, :id => "flash#name" %> <%end %> <%= yield %> 
+    <script src=
+    "https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js">
+    </script> 
+    <script>
+    var teflhikingApp = angular.module('teflhikingApp', [])
+    teflhikingApp.controller('myController', function($scope){
+    $scope.test = "Test";
+    });
+    </script>
+    <footer>
+      <div class="container">
+        <span class="wrap"></span>
+        <p class="text-center"><span class="wrap">TEFL Hiking, ®
+        2016</span></p><span class="wrap"></span>
+      </div>
+    </footer>
   </div>
-</footer>
-
+</body>
 </html>
